feat: secure endpoints
